fix(input-field): align `-` when input-field has no value and readonly

--- a/src/components/input-field/input-field.scss
+++ b/src/components/input-field/input-field.scss
@@ -77,8 +77,10 @@
 }
 
 .lime-empty-value-for-readonly {
-    width: calc(100% - #{functions.pxToRem(20)});
     z-index: z-index.$input-field--formatted-value;
+    position: absolute;
+    top: 0.875rem; // 14px
+    left: 1rem;
 }
 
 .lime-looks-like-input-value {
